name:           LMTetrys
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         frka

executable LMTetrys
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   GLUT,
                   transformers,
                   vector,
                   mtl

  ghc-options:     -Wall
  other-modules:   Display

